--- a/www.nass.gov.ng/b9b1ec024f64b423a04d4bed6b6f279666b010fb.yml
+++ b/www.nass.gov.ng/b9b1ec024f64b423a04d4bed6b6f279666b010fb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 20:44:09 GMT
+    - Wed, 21 Mar 2018 22:40:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CooIyEWVpe3IP7%2CN5WR5e2; path=/
+    - PHPSESSID=N-ee-vKr-acfAwidFVQ7F3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 20:44:09 GMT
+recorded_at: Wed, 21 Mar 2018 22:40:17 GMT
