--- a/www.nass.gov.ng/f868b36d8e39ad9fa96dd7833d1cbef80c5b5fc2.yml
+++ b/www.nass.gov.ng/f868b36d8e39ad9fa96dd7833d1cbef80c5b5fc2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 20:44:38 GMT
+    - Wed, 21 Mar 2018 22:41:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dhsbXjsT08XHsRkUnLQmQ2; path=/
+    - PHPSESSID=v5seXM%2Cpu1BGCKcQjWTuU2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 20:44:38 GMT
+recorded_at: Wed, 21 Mar 2018 22:41:12 GMT
