--- a/www.nass.gov.ng/006013b3879643c5847b51d31e868f9ee71a134b.yml
+++ b/www.nass.gov.ng/006013b3879643c5847b51d31e868f9ee71a134b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 20:45:30 GMT
+    - Wed, 21 Mar 2018 22:42:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2Cxwm-T10rYx6l3q2mjsan0; path=/
+    - PHPSESSID=n1p%2C-y4AsKjiCbbcVbYPl1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 20:45:30 GMT
+recorded_at: Wed, 21 Mar 2018 22:42:28 GMT
