--- a/www.nass.gov.ng/a841a9b40299a2dcc0b9e5d24cb2c3edd67da4c8.yml
+++ b/www.nass.gov.ng/a841a9b40299a2dcc0b9e5d24cb2c3edd67da4c8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 20:47:04 GMT
+    - Wed, 21 Mar 2018 22:43:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dGy6doDDEe25FPruYET0U3; path=/
+    - PHPSESSID=xwwQqchz0069Wu2%2CWMxlj2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 20:47:04 GMT
+recorded_at: Wed, 21 Mar 2018 22:43:52 GMT
