--- a/www.nass.gov.ng/20cd9d71c79da05060c8bbd37c2fe5c3b75512b1.yml
+++ b/www.nass.gov.ng/20cd9d71c79da05060c8bbd37c2fe5c3b75512b1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 20:47:21 GMT
+    - Wed, 21 Mar 2018 22:44:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ewNZhtZAP8lgDA%2CKHISW-1; path=/
+    - PHPSESSID=%2CY1Ry-lkriCOfITH5bDX91; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 20:47:21 GMT
+recorded_at: Wed, 21 Mar 2018 22:44:40 GMT
