--- a/www.nass.gov.ng/bc55340c5441223b2b9461f9825a8ca5ec2203da.yml
+++ b/www.nass.gov.ng/bc55340c5441223b2b9461f9825a8ca5ec2203da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 20:54:03 GMT
+    - Wed, 21 Mar 2018 22:51:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uu5QdKluN-3%2CiPyL3Pi4S3; path=/
+    - PHPSESSID=gS18DJ7ntT4G-9LLQPu5r2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 20:54:03 GMT
+recorded_at: Wed, 21 Mar 2018 22:51:04 GMT
