--- a/www.nass.gov.ng/983a02e94c2734dac31dd581bdfd3041bbc310b8.yml
+++ b/www.nass.gov.ng/983a02e94c2734dac31dd581bdfd3041bbc310b8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 20:57:48 GMT
+    - Wed, 21 Mar 2018 22:53:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IlcnqC59B1RB6ODdtbSKI3; path=/
+    - PHPSESSID=i0k%2COyGuzn9bdlbA4m2253; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 20:57:48 GMT
+recorded_at: Wed, 21 Mar 2018 22:53:49 GMT
