--- a/www.nass.gov.ng/f48bc6229c8c6db7ec2e751c9e18561b98fe3ff6.yml
+++ b/www.nass.gov.ng/f48bc6229c8c6db7ec2e751c9e18561b98fe3ff6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 21:03:05 GMT
+    - Wed, 21 Mar 2018 22:57:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8HtOvvCI%2CFW-FZZBFOmhu3; path=/
+    - PHPSESSID=GUzA0hn9vdouedWsT5LXi0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 21:03:05 GMT
+recorded_at: Wed, 21 Mar 2018 22:57:22 GMT
