--- a/www.nass.gov.ng/35957b2e246a187dd4c9ee88796f8296d4c108cf.yml
+++ b/www.nass.gov.ng/35957b2e246a187dd4c9ee88796f8296d4c108cf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 21:04:11 GMT
+    - Wed, 21 Mar 2018 22:57:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=x%2C9OvkKExJ65vxrXT89kD1; path=/
+    - PHPSESSID=OT0M6IIsTtKKbDY6AO7xl2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 21:04:11 GMT
+recorded_at: Wed, 21 Mar 2018 22:57:57 GMT
