--- a/www.nass.gov.ng/14370e5637ae929d023eb9a42ae10e004666b157.yml
+++ b/www.nass.gov.ng/14370e5637ae929d023eb9a42ae10e004666b157.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 21:05:17 GMT
+    - Wed, 21 Mar 2018 22:59:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YzufTBkSu%2CL5dewaynk9R3; path=/
+    - PHPSESSID=7cV3Bx4m4DHLlql5cwHHs2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 21:05:17 GMT
+recorded_at: Wed, 21 Mar 2018 22:59:03 GMT
