--- a/www.nass.gov.ng/ab0365787f948cd9973b88a0829cb223dad655a0.yml
+++ b/www.nass.gov.ng/ab0365787f948cd9973b88a0829cb223dad655a0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 21:08:43 GMT
+    - Wed, 21 Mar 2018 23:02:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ml%2CNsaw7eirl%2CCpe0zW7%2C2; path=/
+    - PHPSESSID=pbLC9IbKpkZU1hlYeB14e3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 21:08:43 GMT
+recorded_at: Wed, 21 Mar 2018 23:02:58 GMT
