--- a/www.nass.gov.ng/ac7729f6d42fb4c5f9a3634ae8c33c56c2ade3f3.yml
+++ b/www.nass.gov.ng/ac7729f6d42fb4c5f9a3634ae8c33c56c2ade3f3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 21:15:03 GMT
+    - Wed, 21 Mar 2018 23:08:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mpZcZSqiXD%2CMU47iN7cZe3; path=/
+    - PHPSESSID=kcWEiF97oY87-nG-KPLxp3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 21:15:03 GMT
+recorded_at: Wed, 21 Mar 2018 23:08:53 GMT
