--- a/www.nass.gov.ng/a27c2c24fa275fd533b551f1daf3a986cfb4b182.yml
+++ b/www.nass.gov.ng/a27c2c24fa275fd533b551f1daf3a986cfb4b182.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 21:26:23 GMT
+    - Wed, 21 Mar 2018 23:20:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IF%2CQWlNNHZuJkTMku3xui3; path=/
+    - PHPSESSID=Qepm24b0swOLezeYi%2CX1w3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 21:26:23 GMT
+recorded_at: Wed, 21 Mar 2018 23:20:59 GMT
