--- a/www.nass.gov.ng/b37282e788ebbe74cae4a20c9e5425298a8c7d1b.yml
+++ b/www.nass.gov.ng/b37282e788ebbe74cae4a20c9e5425298a8c7d1b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 21:37:45 GMT
+    - Wed, 21 Mar 2018 23:32:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vTazx1-ixniWsCrV%2CpdNs2; path=/
+    - PHPSESSID=7-CTteZ9HV3U3CEz%2CjgdU3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 21:37:46 GMT
+recorded_at: Wed, 21 Mar 2018 23:32:43 GMT
