--- a/www.nass.gov.ng/292abf35efa1888e305bf4e7cc38c7b47eab27f7.yml
+++ b/www.nass.gov.ng/292abf35efa1888e305bf4e7cc38c7b47eab27f7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 21:39:00 GMT
+    - Wed, 21 Mar 2018 23:34:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6NgRoznZUe%2CIRQnvUviWN3; path=/
+    - PHPSESSID=P72x4Qut66XKvt3xsBm731; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 21:39:00 GMT
+recorded_at: Wed, 21 Mar 2018 23:34:02 GMT
