--- a/www.nass.gov.ng/abcd883fbfadf2868b3440aebca41cf8190de939.yml
+++ b/www.nass.gov.ng/abcd883fbfadf2868b3440aebca41cf8190de939.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 21:39:32 GMT
+    - Wed, 21 Mar 2018 23:34:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=el%2CHLDD%2CupYA-DQlvZ5jK3; path=/
+    - PHPSESSID=2dw8sdsh-BQ8WaBqG5vpM0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 21:39:32 GMT
+recorded_at: Wed, 21 Mar 2018 23:34:47 GMT
