--- a/www.nass.gov.ng/b9c19db7c875fe1a34cbffd022cbb27ab7d932f4.yml
+++ b/www.nass.gov.ng/b9c19db7c875fe1a34cbffd022cbb27ab7d932f4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 21:43:57 GMT
+    - Wed, 21 Mar 2018 23:40:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oWFN7dpasld3RVuXGfHHL3; path=/
+    - PHPSESSID=8fTLhGITMSPcZv8BL5PJ%2C2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 21:43:57 GMT
+recorded_at: Wed, 21 Mar 2018 23:40:53 GMT
