--- a/www.nass.gov.ng/bb4711120a8e408f615d49be27b27612989c613c.yml
+++ b/www.nass.gov.ng/bb4711120a8e408f615d49be27b27612989c613c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 21:54:52 GMT
+    - Wed, 21 Mar 2018 23:53:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bBwD%2C0%2CwmOQpnoSmpQ0tU3; path=/
+    - PHPSESSID=jwGR9dq0llWhGsD1RAeYX1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 21:54:52 GMT
+recorded_at: Wed, 21 Mar 2018 23:53:50 GMT
