--- a/www.nass.gov.ng/d28a062319d965aec4e8390c2de4d8a30f79aaf5.yml
+++ b/www.nass.gov.ng/d28a062319d965aec4e8390c2de4d8a30f79aaf5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 22:05:50 GMT
+    - Thu, 22 Mar 2018 00:05:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hnTtwwA-6a3-LSJqtWa%2C30; path=/
+    - PHPSESSID=S2Q2wspZgdT3a3GS4tR6n0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 22:05:50 GMT
+recorded_at: Thu, 22 Mar 2018 00:05:24 GMT
